# recovery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENCRYPTION.md  LICENSE  README.md  SECURITY.md  pyproject.toml  recovery.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
recovery/: __init__.py  __main__.py  device_io.py  encryption.py  file_list.py  filesystem.py  gui.py  hybrid.py  models.py  partitions.py  preview.py  recover.py  results_store.py  scanner.py  security.py  signatures.py  timestamps.py  validation.py  volumes.py  webui.py
recovery/static/: app.css  app.js  index.html
tests/: __init__.py  conftest.py  test_encryption.py  test_file_list.py  test_filesystem.py  test_models.py  test_partitions.py  test_preview.py  test_recover.py  test_results_store.py  test_security.py  test_timestamps.py  test_validation.py
tests/integration/: test_api_and_scanner.py
