[project]
name = "mac-recovery"
version = "0.1.0"
description = "macOS disk recovery tool with deep file carving and a browser-based UI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Recovery contributors" }]
keywords = ["macos", "recovery", "disk", "carving", "forensics", "data-recovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Recovery Tools",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
recovery = "recovery.__main__:main"

[project.urls]
Homepage = "https://github.com/matt-asbury/recovery"
Repository = "https://github.com/matt-asbury/recovery"
Issues = "https://github.com/matt-asbury/recovery/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["recovery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
